# chat-bot-LLm

./: .gitignore  ChatBot_Launcher.vbs  Dockerfile  File_Explore.py  Gui.py  README.md  docker-compose.yml  filepaths.json  main.py  news.py  pdf_reader.py  pyproject.toml  python resume_to_json.py.py  resume.json  run_chatbot.bat  weapia_seaech.py
Coding/: Client.py  callFuction.py
Coding/functions/: getFileInfo.py  get_file_content.py  run_python_file.py
Uicomponents/: clock.py
coding-agent/: Client.py  callFuction.py
coding-agent/functions/: getFileInfo.py  get_file_content.py  run_python_file.py  write_file.py
config/: Dockerfile  Modelfile  command.py  fine_turning.py
pdf_reader/: README.md  SETUP.md  __init__.py  config.py  pdf_utils.py  reader.py
tools/: tool_call.py  tools_schema.py  weather.py  websearch.py
tools/Memory/: create_memory.py
utils/: hindi.py  pdfQNA.py  pdf_reader.py  spech.py  trasitor.py  voice_input.py
vector_db/: index.faiss  index.pkl
