[project]
name = "chatbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.7",
    "ollama>=0.5.3",
    "pyinstaller>=6.15.0",
    "pyttsx3>=2.99",
    "streamlit>=1.49.1",
    "wikipedia>=1.4.0",
]
