[project]
name = "chatbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.3",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "newsapi-python>=0.2.7",
    "ollama>=0.5.3",
    "pyinstaller>=6.15.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "pyttsx3>=2.99",
    "streamlit>=1.49.1",
    "wikipedia>=1.4.0",
]
